map.css
#map {
  height: 100vh;
  position: relative
}

.leaflet-layer,
.leaflet-control-zoom-in,
.leaflet-control-zoom-out,
.leaflet-control-attribution {
  filter: invert(100%) hue-rotate(180deg) brightness(95%) contrast(90%);
}
html {background-color: #1d404a;}

.sidenav {
  height: 100%;
  width: 0;
  position: fixed;
  z-index: 999;
  top: 0;
  right: 0;
  background-color: #111;
  overflow-x: hidden;
  transition: 0.5s;
  padding-top: 60px;
}

.sidenav a {
  padding: 8px 8px 8px 32px;
  text-decoration: none;
  font-size: 25px;
  color: #818181;
  display: block;
  transition: 0.3s;
}

.sidenav a:hover {
  color: #f1f1f1;
}

.sidenav .closebtn {
  position: absolute;
  top: 0;
  right: 25px;
  font-size: 36px;
  margin-left: 50px;
}

@media screen and (max-height: 450px) {
  .sidenav {padding-top: 15px;}
  .sidenav a {font-size: 18px;}
}

body {
  font-family: "Lato", sans-serif;
}

.navbar {
  cursor: pointer;
  text-align: right;
  font-size: 50px;
  text-align: right;
  display: block;
}

.map-menu {
  position: absolute;
  top: 15px;
  right: 15px;
  z-index: 998;
  padding: 10px 14px;
  background: #111;
  color: white;
  border: none;
  border-radius: 6px;
  cursor: pointer;
  padding: 10px 26px;
  font-size: 20px;
}

